include location and desired job

--- a/index.html
+++ b/index.html
@@ -260,6 +260,15 @@
                         </select>
                     </div>
                     <div>
+                        <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
+                        <input type="text" name="entry.244105228" id="location" required class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                    </div>
+                    <div>
+                        <label for="desired" class="block text-sm font-medium text-gray-700">Desired Work/Worker</label>
+                        <input type="text" name="entry.1633603656" id="desired" required class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                    </div>
+                    
+                    <div>
                         <button type="submit" class="w-full btn-custom px-6 py-3 rounded-md text-lg font-medium">Sign Up</button>
                     </div>
                 </form>                    
