--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <section id="hero" class="container bg-white mx-auto text-black mb-8 md:mb-32 px-6 lg:px-12 relative" style="max-width: 1405px;">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="w-full md:w-1/2 mb-12 md:mb-0">
-            <h1 class="text-4xl font-bold mb-4">Find Work <span>When</span> You Want, Help When You <span>When</span> It</h1>
+            <h1 class="text-4xl font-bold mb-4">Find Work <span>When</span> You Want, Help When <span>When</span> You Need It</h1>
             <p class="text-lg mb-8">FlexiWork connects you with on-demand task assistance and job opportunities, empowering you to get things done and make money effortlessly.</p>
             <a href="#sign-up" class="btn-custom w-full md:w-1/3 px-6 py-4 rounded block text-center">Get Started</a>
         </div>
